worked on the footer, have the base done, need to fix the spacing

--- a/frontend/src/components/layout/footer/footer.module.css
+++ b/frontend/src/components/layout/footer/footer.module.css
@@ -1,16 +1,104 @@
 /* ----------------------Footer----------------------*/
 /* https: //www.youtube.com/watch?v=YOb67OKw62s i.e. Responsive Footer Design using Html & Css by "The WebShala" */
 
-.footer {
-    margin: 0;
+.container1 {
+    display: flex;
+    background-color: black;
+    width: 100%;
+    height: 80vh;
+    border-top-left-radius: 36px;
+    border-top-right-radius: 36px;
+    align-items: flex-start;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.logoLine {
+    display: flex;
+    z-index: 1001;
+    align-items: center;
+    top: 0;
+    height: 4rem;
+    width: 100%;
+}
+
+.logoContainer { 
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    color: var(--white);
+    height: 3rem;
+    align-items: center;
     padding: 0;
+    width: 90%;
+    max-width: 1740px;
+    margin-top: 0%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+}
+
+.companyName{
+    font-family: Montserrat;
+    font-size: 2rem;
+    letter-spacing: -1.3px;
+    margin-left: 45px;
+    font-weight: 100;
+}
+
+.Logo {
+    display: flex;
+    height: 3.7rem;
+    width: 3.57rem;
+}
+
+.Logo:hover {
+    cursor: pointer;
+    transform: rotate(180deg);
+    animation: around .18s ease-in forwards;
+}
+
+.spacer1{
+    width: 100%;
+    height: 100px;
+}
+.spacer2{
+    width: 100%;
+    height: 100px;
+}
+/*========== Animation ==========*/
+@keyframes around {
+    0% {
+        transform: rotate(22.5deg);
+    }
+
+    33% {
+        transform: rotate(45deg);
+    }
+
+    66% {
+        transform: rotate(67.5deg);
+    }
+
+    100% {
+        transform: rotate(90deg);
+    }
+}
+
+/* Devices under 1011px */
+@media (max-width: 1011px) {
+    .logoContainer{
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+.footer {
     box-sizing: border-box;
     background-color: var(--black);
-    padding: 130px 0;
-    width: 60%;
-    height: 100vh;
-    margin-left: 20%;
-    margin-right: 20%;
+    width: 64%;
+    margin-left: 18%;
+    margin-right: 18%;
 }
 
 /*========== Media Queries ==========*/
@@ -40,14 +128,17 @@
 
 /*====================================*/
 .container2 {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     max-width: 100%;
     margin: auto;
-    /* overflow: visible; */
-    margin-left: 5%;
+    
 }
 
-.row {
+.linksRow {
     display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 
@@ -58,16 +149,14 @@
 }
 
 .footer_col {
-    padding: 0 15px;
     display: block;
-    width: 25%;
-    min-width: 140px;
+    width: 106px;
     text-align: left;
+    font-family: Roboto;
 }
 
 .footer_col h4 {
     font-size: 18px;
-    /*Dark-Mode Difference*/
     color: #ffffff;
     text-transform: capitalize;
     margin-bottom: 30px;
@@ -112,17 +201,41 @@
     padding-left: 8px;
 }
 
+.socialRow{
+    width: 100%;    
+}
+
+.social_col{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+}
+
+.social_col ul li a {
+    font-size: 16px;
+    text-transform: capitalize;
+    text-decoration: none;
+    font-weight: 300;
+    color: #bbbbbb;
+    display: block;
+    transition: all 0.3s ease;
+    min-width: 140px;
+}
+
+.social_col ul li a:hover {
+    color: #0066FF;
+    padding-left: 8px;
+}
+
 .social_links a {
     display: inline-block;
     height: 40px;
     width: 40px;
-    /*Dark-Mode Difference*/
     background-color: rgba(255, 255, 255, 0.2);
     margin: 0 10px 10px 0;
     text-align: center;
     line-height: 40px;
     border-radius: 50%;
-    /*Dark-Mode Difference*/
     color: #ffffff;
     transition: all 0.5s ease;
 }
